[workspace]
members = [
  "src/quip",
  "src/quip-executor",
  "src/quip-utils",
  "src/tinyproc"
]
resolver = "2"

[profile.bench]
panic = "unwind"
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
