[package]
name = "quip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = [
	"derive",
	"unstable-doc",
] } # Remove unstable doc feature
cliclack = "0.1.13"
dialoguer = "0.11.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
indicatif = "0.17.8"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
syn = { version = "2.0.58", features = ["full", "extra-traits"] }
tokio = { version = "1.37.0", features = ["full"] }
