[package]
name = "quip-utils"
version = "0.3.3"
description = "Utilities for Quip, the highly-available, fault-tolerant, async communication oriented executor"
authors = [
    "Mahmut Bulut <vertexclique@gmail.com>",
    "Patrice Billaut <pbillaut@pm.me>",
    "Ivan Leon <i.leonmaldonado@gmail.com>"
]
keywords = ["fault-tolerant", "runtime", "actor", "system"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/ielm/quip"
repository = "https://github.com/ielm/quip"
documentation = "https://docs.rs/quip"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

[badges]
travis-ci = { repository = "ielm/quip", branch = "master" }
maintenance = { status = "actively-developed" }
