[package]
name = "tinyproc"
version = "0.3.7-alpha.0"
description = "Lightweight process abstraction for Rust"
authors = ["Mahmut Bulut <vertexclique@gmail.com>", "Ivan Leon <i.leonmaldonado@gmail.com>"]
keywords = ["fault-tolerant", "runtime", "actor", "system", "lightweight-process"]
categories = ["concurrency", "asynchronous"]
homepage = "https://github.com/ielm/quip"
repository = "https://github.com/ielm/quip"
documentation = "https://docs.rs/quip"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
crossbeam-utils = "0.8"
pin-utils = "0.1.0"

[dev-dependencies]
crossbeam = "0.8"
futures-executor = "0.3"
lazy_static = "1.4.0"
